* Debian installation file used for Debian OS family instead of only Debian distribution    * By this way installation works also for Ubuntu * Network and Graphite plugin configs changes so that it is possible to write to Graphite   from what ever node, not only from collectd_forwarder.

--- a/templates/collectd.conf.j2
+++ b/templates/collectd.conf.j2
@@ -49,4 +49,4 @@ Interval     {{ collectd_interval|default('60') }}
 #WriteQueueLimitHigh 1000000
 #WriteQueueLimitLow   800000
 
-Include "/etc/collectd.d"
+Include "{{ collectd_d_config_dir }}"
